--- a/main.html
+++ b/main.html
@@ -12,23 +12,23 @@
 	<a href="https://acciojob.com/blog/"><h1>Blog</h1></a>
 	<article>
 		<br>
-		<img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" width=200px/>
+		<img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" height=200px/>
 		<br>
 		<a href=""><b>Brute Force vs. Optimization</b></a>
 		<p>We can say that optimization is...</p>
 	</article>
 	<article>
 		<br>
-		<img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" width=200px/>
+		<img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" height=200px/>
 		<br>
-		<a href=""><b>DSA vs. Competitive Programming</b></a>
+		<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/"><b>DSA vs. Competitive Programming</b></a>
 		<p>DSA or Competitive programming?...</p>
 	</article>
 	<article>
 		<br>
-		<img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" width=200px/>
+		<img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" height=200px/>
 		<br>
-		<a href=""><b>Complete Guide on FlexBox</b></a>
+		<a href="https://acciojob.com/blog/untitled-19/"><b>Complete Guide on FlexBox</b></a>
 		<p>As a job seeker, you may wonder...</p>
 	</article>
     <script type="text/javascript" src="./script.js">
